--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "learning-dashboard",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://javoxirone.github.io/BeCourse",
+  "homepage": "https://javoxirone.github.io/BeCourse/",
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
